--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "expo": "^49.0.18",
     "expo-status-bar": "~1.6.0",
+    "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-native": "0.72.6"
   },
