--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.8",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "^49.0.0",
+    "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "punycode": "^2.3.1",
     "react": "18.2.0",
+    "react-google-charts": "^4.0.1",
+    "react-loading": "^2.0.3",
     "react-native": "0.72.6"
   },
   "devDependencies": {
