--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.8",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "expo": "^49.0.0",
-    "expo-secure-store": "^12.5.0",
+    "apexcharts": "^3.44.2",
+    "expo": "^49.0.21",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.17",
     "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-google-charts": "^4.0.1",
     "react-loading": "^2.0.3",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-circular-progress": "^1.3.9",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.23.5"
   },
   "private": true
 }
