--- a/package.json
+++ b/package.json
@@ -19,19 +19,21 @@
     "apexcharts": "^3.44.2",
     "expo": "^49.0.0",
     "expo-cli": "^4.0.17",
+    "expo-image-picker": "~14.3.2",
+    "expo-permissions": "~14.2.1",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.17",
+    "expo-updates": "~0.18.18",
     "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-google-charts": "^4.0.1",
     "react-loading": "^2.0.3",
     "react-native": "0.72.6",
     "react-native-circular-progress": "^1.3.9",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0"
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5"
