--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@callstack/react-theme-provider": "^3.0.9",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/drawer": "^6.6.6",
-    "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "apexcharts": "^3.44.2",
+    "chokidar": "^3.5.3",
     "expo": "^49.0.0",
     "expo-cli": "^4.0.17",
     "expo-image-picker": "~14.3.2",
@@ -32,6 +30,7 @@
     "react-native-circular-progress": "^1.3.9",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
+    "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
   },
