--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "expo-status-bar": "~1.7.1",
     "expo-updates": "~0.18.18",
     "metro-core": "^0.80.2",
+    "moment": "^2.30.1",
     "punycode": "^2.3.1",
     "react": "18.2.0",
-    "react-google-charts": "^4.0.1",
-    "react-loading": "^2.0.3",
+    "react-apexcharts": "^1.4.1",
     "react-native": "0.72.6",
     "react-native-circular-progress": "^1.3.9",
     "react-native-gesture-handler": "~2.12.0",
@@ -35,7 +35,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "14.1.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "victory-native": "^40.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7"
