--- a/package.json
+++ b/package.json
@@ -16,27 +16,26 @@
     "apexcharts": "^3.45.1",
     "chokidar": "^3.5.3",
     "expo": "^49.0.21",
-    "expo-cli": "^6.3.10",
-    "expo-image-picker": "~14.5.0",
-    "expo-permissions": "~14.4.0",
+    "expo-cli": "^4.0.17",
+    "expo-image-picker": "~14.3.2",
+    "expo-permissions": "~14.2.1",
     "expo-splash-screen": "^0.22.0",
-    "expo-status-bar": "~1.7.1",
-    "expo-updates": "~0.18.19",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.18",
     "metro-core": "^0.80.2",
-    "moment": "^2.30.1",
     "punycode": "^2.3.1",
     "react": "18.2.0",
-    "react-apexcharts": "^1.4.1",
-    "react-native": "0.73.1",
+    "react-google-charts": "^4.0.1",
+    "react-loading": "^2.0.3",
+    "react-native": "0.72.6",
     "react-native-circular-progress": "^1.3.9",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-parsed-text": "^0.0.22",
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "14.1.0",
-    "react-native-vector-icons": "^10.0.3",
-    "victory-native": "^40.0.3"
+    "react-native-svg": "13.9.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7"
