--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --tunnel",
+    "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -19,12 +19,13 @@
     "expo-cli": "^4.0.17",
     "expo-image-picker": "~14.3.2",
     "expo-permissions": "~14.2.1",
-    "expo-splash-screen": "^0.22.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.18",
     "metro-core": "^0.80.2",
     "punycode": "^2.3.1",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-google-charts": "^4.0.1",
     "react-loading": "^2.0.3",
     "react-native": "0.72.6",
