--- a/package.json
+++ b/package.json
@@ -9,37 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "apexcharts": "^3.45.1",
-    "chokidar": "^3.5.3",
-    "expo": "^49.0.22",
-    "expo-cli": "^4.0.17",
-    "expo-image-picker": "~14.3.2",
-    "expo-permissions": "~14.2.1",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.18",
-    "metro-core": "^0.80.2",
+    "apexcharts": "^3.45.2",
+    "chokidar": "^3.6.0",
+    "expo": "^50.0.6",
+    "expo-cli": "^6.3.12",
+    "expo-image-picker": "~14.7.1",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "^2.9.3",
+    "expo-updates": "~0.24.10",
+    "metro-core": "^0.80.5",
     "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-google-charts": "^4.0.1",
     "react-loading": "^2.0.3",
-    "react-native": "0.72.6",
+    "react-native": "0.73.4",
     "react-native-circular-progress": "^1.3.9",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-parsed-text": "^0.0.22",
     "react-native-responsive-linechart": "^5.7.1",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7"
+    "@babel/core": "^7.23.9"
   },
   "private": true
 }
