--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native": "0.73.4",
     "react-native-circular-progress": "^1.3.9",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-parsed-text": "^0.0.22",
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "4.8.2",
