--- a/package.json
+++ b/package.json
@@ -10,37 +10,39 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
-    "apexcharts": "^3.45.2",
+    "@react-navigation/bottom-tabs": "^6.5.18",
+    "@react-navigation/native": "^6.1.15",
+    "@react-navigation/stack": "^6.3.27",
     "chokidar": "^3.6.0",
-    "expo": "^50.0.6",
+    "d3-shape": "^3.2.0",
+    "expo": "~50.0.11",
     "expo-cli": "^6.3.12",
     "expo-image-picker": "~14.7.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "^2.9.3",
-    "expo-updates": "~0.24.10",
-    "metro-core": "^0.80.5",
+    "expo-updates": "~0.24.11",
+    "metro-core": "^0.80.6",
+    "moment": "^2.30.1",
     "punycode": "^2.3.1",
     "react": "18.2.0",
-    "react-apexcharts": "^1.4.1",
-    "react-google-charts": "^4.0.1",
+    "react-dom": "18.2.0",
     "react-loading": "^2.0.3",
     "react-native": "0.73.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-parsed-text": "^0.0.22",
-    "react-native-responsive-linechart": "^5.7.1",
+    "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
