--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ yarn-error.*
 
 # local env files
 .env*.local
-
+android/local.properties
+android/energisense-app.keystore
 # typescript
 *.tsbuildinfo
+
+
