--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,6 +77,9 @@ def enableProguardInReleaseBuilds = (findProperty('android.enableProguardInRelea
  */
 def jscFlavor = 'org.webkit:android-jsc:+'
 
+def properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
 android {
     ndkVersion rootProject.ext.ndkVersion
 
@@ -94,11 +97,11 @@ android {
         buildConfigField("boolean", "REACT_NATIVE_UNSTABLE_USE_RUNTIME_SCHEDULER_ALWAYS", (findProperty("reactNative.unstable_useRuntimeSchedulerAlways") ?: true).toString())
     }
     signingConfigs {
-        debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+        release {
+            storeFile file("../${properties.getProperty("MYAPP_RELEASE_STORE_FILE")}")
+            storePassword properties.getProperty("MYAPP_RELEASE_STORE_PASSWORD")
+            keyAlias properties.getProperty("MYAPP_RELEASE_KEY_ALIAS")
+            keyPassword properties.getProperty("MYAPP_RELEASE_KEY_PASSWORD")
         }
     }
     buildTypes {
@@ -108,7 +111,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
