--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.18",
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/stack": "^6.3.27",
     "chokidar": "^3.6.0",
     "d3-shape": "^3.2.0",
-    "expo": "~50.0.11",
+    "expo": "~50.0.13",
+    "expo-app-loading": "^2.1.1",
     "expo-cli": "^6.3.12",
     "expo-image-picker": "~14.7.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "^2.9.3",
-    "expo-updates": "~0.24.11",
+    "expo-updates": "~0.24.12",
     "metro-core": "^0.80.6",
     "moment": "^2.30.1",
     "punycode": "^2.3.1",
@@ -39,7 +41,9 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "typescript": "^5.4.2",
+    "expo-font": "~11.10.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
