--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@react-navigation/stack": "^6.3.27",
     "chokidar": "^3.6.0",
     "d3-shape": "^3.2.0",
-    "expo": "~50.0.13",
+    "expo": "~50.0.17",
     "expo-app-loading": "^2.1.1",
     "expo-cli": "^6.3.12",
     "expo-image-picker": "~14.7.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "^2.9.3",
+    "expo-system-ui": "~2.9.4",
     "expo-updates": "~0.24.12",
     "metro-core": "^0.80.6",
     "moment": "^2.30.1",
@@ -30,7 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading": "^2.0.3",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-gesture-handler": "~2.14.0",
