--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "energisense",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -30,7 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading": "^2.0.3",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-gesture-handler": "~2.14.0",
